[gd_scene load_steps=20 format=2]

[ext_resource path="res://_resources/tournament/dialogue_box.png" type="Texture" id=1]
[ext_resource path="res://_scripts/game_dialog.gd" type="Script" id=2]
[ext_resource path="res://_resources/backgrounds/black.png" type="Texture" id=3]
[ext_resource path="res://_resources/backgrounds/white.png" type="Texture" id=4]
[ext_resource path="res://_resources/scene_deck_building/big_button.png" type="Texture" id=5]
[ext_resource path="res://_resources/fonts/BankGothic Md BT.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://_resources/backgrounds/bg_shop_out.jpg" type="Texture" id=7]
[ext_resource path="res://_scenes/scene_transitioner.tscn" type="PackedScene" id=8]
[ext_resource path="res://_resources/backgrounds/bg2.jpg" type="Texture" id=9]
[ext_resource path="res://_resources/backgrounds/bg3.jpg" type="Texture" id=10]
[ext_resource path="res://_scripts/save_load_logic.gd" type="Script" id=11]
[ext_resource path="res://_resources/backgrounds/bg_street_night.jpg" type="Texture" id=12]
[ext_resource path="res://_resources/backgrounds/bg_abandoned_dorm_inside.png" type="Texture" id=13]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 101, 45 )
margin_left = 22.0
margin_right = 23.0
margin_top = 17.0
margin_bottom = 18.0

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 42
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 6 )

[node name="game_dialog" type="Node2D"]
script = ExtResource( 2 )

[node name="black_bg" type="Sprite" parent="."]
scale = Vector2( 1, 1.00139 )
texture = ExtResource( 3 )
centered = false

[node name="reference_dialog_box" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 600 )
z_index = 1
texture = ExtResource( 1 )

[node name="black_overlay" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )
centered = false

[node name="white_overlay" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="tween" type="Tween" parent="."]

[node name="additional_screen_elements" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="player_name_box" type="Panel" parent="additional_screen_elements"]
visible = false
margin_left = 240.0
margin_top = 300.0
margin_right = 1040.0
margin_bottom = 360.0
custom_styles/panel = SubResource( 1 )

[node name="player_name_visual" type="Label" parent="additional_screen_elements/player_name_box"]
visible = false
margin_left = 18.0
margin_top = 5.0
margin_right = 780.0
margin_bottom = 54.0
focus_mode = 2
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
clip_text = true

[node name="player_name_input" type="LineEdit" parent="additional_screen_elements/player_name_box"]
margin_left = 18.0
margin_top = 5.0
margin_right = 780.0
margin_bottom = 54.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1
max_length = 13
secret_character = " "
context_menu_enabled = false
clear_button_enabled = true
middle_mouse_paste_enabled = false
deselect_on_focus_loss_enabled = false
placeholder_text = "PLAYER NAME"
placeholder_alpha = 0.3

[node name="Button" type="Button" parent="additional_screen_elements/player_name_box"]
margin_left = 347.0
margin_top = 64.0
margin_right = 460.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 56, 25 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="button_box" type="Panel" parent="additional_screen_elements/player_name_box/Button"]
margin_left = -7.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 48.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="done" type="Label" parent="additional_screen_elements/player_name_box/Button"]
margin_left = -2.0
margin_top = 5.0
margin_right = 116.0
margin_bottom = 45.0
focus_mode = 2
custom_fonts/font = SubResource( 6 )
text = "Done"
align = 1
valign = 1

[node name="tween" type="Tween" parent="additional_screen_elements/player_name_box/Button"]

[node name="pop_up_save" type="Control" parent="additional_screen_elements"]
visible = false
margin_right = 1282.0
margin_bottom = 720.0

[node name="pop_up_text" type="Label" parent="additional_screen_elements/pop_up_save"]
margin_right = 1280.0
margin_bottom = 640.0
focus_mode = 2
custom_fonts/font = SubResource( 2 )
text = "Do you want to save your progress?"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="button_yes" type="Button" parent="additional_screen_elements/pop_up_save"]
margin_left = 511.0
margin_top = 364.0
margin_right = 624.0
margin_bottom = 415.0
rect_pivot_offset = Vector2( 56, 25 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="button_box" type="Panel" parent="additional_screen_elements/pop_up_save/button_yes"]
margin_left = -7.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 48.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="label" type="Label" parent="additional_screen_elements/pop_up_save/button_yes"]
margin_left = -2.0
margin_top = 5.0
margin_right = 116.0
margin_bottom = 45.0
focus_mode = 2
custom_fonts/font = SubResource( 6 )
text = "YES"
align = 1
valign = 1

[node name="tween" type="Tween" parent="additional_screen_elements/pop_up_save/button_yes"]

[node name="button_no" type="Button" parent="additional_screen_elements/pop_up_save"]
margin_left = 655.0
margin_top = 364.0
margin_right = 768.0
margin_bottom = 415.0
rect_pivot_offset = Vector2( 56, 25 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="button_box" type="Panel" parent="additional_screen_elements/pop_up_save/button_no"]
margin_left = -7.0
margin_top = 3.0
margin_right = 121.0
margin_bottom = 48.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="label" type="Label" parent="additional_screen_elements/pop_up_save/button_no"]
margin_left = -2.0
margin_top = 5.0
margin_right = 116.0
margin_bottom = 45.0
focus_mode = 2
custom_fonts/font = SubResource( 6 )
text = "NO"
align = 1
valign = 1

[node name="tween" type="Tween" parent="additional_screen_elements/pop_up_save/button_no"]

[node name="button_return_to_title" type="Button" parent="additional_screen_elements/pop_up_save"]
margin_left = 452.0
margin_top = 412.0
margin_right = 831.0
margin_bottom = 463.0
rect_pivot_offset = Vector2( 189, 25 )
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="button_box" type="Panel" parent="additional_screen_elements/pop_up_save/button_return_to_title"]
margin_top = 3.0
margin_right = 379.0
margin_bottom = 48.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="label" type="Label" parent="additional_screen_elements/pop_up_save/button_return_to_title"]
margin_left = 2.0
margin_top = 5.0
margin_right = 376.0
margin_bottom = 45.0
focus_mode = 2
custom_fonts/font = SubResource( 6 )
text = "Yes and return to menu"
align = 1
valign = 1

[node name="tween" type="Tween" parent="additional_screen_elements/pop_up_save/button_return_to_title"]

[node name="save_logic" type="Node" parent="additional_screen_elements/pop_up_save"]
script = ExtResource( 11 )

[node name="special_backgrounds" type="Node2D" parent="additional_screen_elements"]

[node name="shop_out" type="Sprite" parent="additional_screen_elements/special_backgrounds"]
visible = false
position = Vector2( -33, -21 )
scale = Vector2( 1.05, 1.07639 )
texture = ExtResource( 7 )
centered = false
region_rect = Rect2( 263, 2, 806, 679 )

[node name="vs_darknite" type="Sprite" parent="additional_screen_elements/special_backgrounds"]
visible = false
position = Vector2( -128, 0 )
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 9 )
centered = false

[node name="king_throne" type="Sprite" parent="additional_screen_elements/special_backgrounds"]
visible = false
position = Vector2( 0, -500 )
texture = ExtResource( 10 )
centered = false

[node name="street_night" type="Sprite" parent="additional_screen_elements/special_backgrounds"]
visible = false
position = Vector2( -33, -21 )
scale = Vector2( 1.05, 1.07639 )
texture = ExtResource( 12 )
centered = false
region_rect = Rect2( 263, 2, 806, 679 )

[node name="ritual_room" type="Sprite" parent="additional_screen_elements/special_backgrounds"]
visible = false
position = Vector2( -33, -21 )
scale = Vector2( 1.05, 1.07639 )
texture = ExtResource( 13 )
centered = false
region_rect = Rect2( 263, 2, 806, 679 )

[node name="none" type="Sprite" parent="additional_screen_elements/special_backgrounds"]
visible = false

[node name="bg_tween" type="Tween" parent="additional_screen_elements/special_backgrounds"]

[node name="general_timer" type="Timer" parent="."]

[node name="scene_transitioner" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="text_changed" from="additional_screen_elements/player_name_box/player_name_input" to="." method="_on_player_name_input_text_changed"]
[connection signal="button_up" from="additional_screen_elements/player_name_box/Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="additional_screen_elements/pop_up_save/button_yes" to="." method="_on_button_yes_button_up"]
[connection signal="button_up" from="additional_screen_elements/pop_up_save/button_no" to="." method="_on_button_no_button_up"]
[connection signal="button_up" from="additional_screen_elements/pop_up_save/button_return_to_title" to="." method="_on_button_return_to_title_button_up"]
